--- a/01.JavaReview/pom.xml
+++ b/01.JavaReview/pom.xml
@@ -10,8 +10,8 @@
 		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 
+<!--Developer: Usman, Muhammad-->
 	<dependencies>
-
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
